--- a/source/index.html
+++ b/source/index.html
@@ -114,6 +114,12 @@
       <img class="maps__image" src="./img/map-mobile@1x.jpg" srcset="./img/map-mobile@2x.jpg 2x"
         alt="Карта городка Седона">
     </picture>
+    <svg class="maps__svg" width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M13.5 27C20.9558 27 27 20.9558 27 13.5C27 6.04416 20.9558 0 13.5 0C6.04416 0 0 6.04416 0 13.5C0 20.9558 6.04416 27 13.5 27Z" fill="white"/>
+      </svg>
+    <svg class="maps__svg2" width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M8.49998 16.8996C13.1392 16.8996 16.9 13.1388 16.9 8.49961C16.9 3.86042 13.1392 0.0996094 8.49998 0.0996094C3.86078 0.0996094 0.0999756 3.86042 0.0999756 8.49961C0.0999756 13.1388 3.86078 16.8996 8.49998 16.8996Z" fill="#81B3D3"/>
+      </svg>
   </div>
 </main>
 {% endblock %}
