--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,10 +41,10 @@
           <p class="catalog__item-two-image">
             <picture>
               <source media="(min-width: 1200px)"
-                srcset="img/catalog/photo-2-desktop@1x.jpg 1x, img/catalog/photo-2-desktop@2x.jpg 2x" <source
-                media="(min-width: 768px)"
-                srcset="img/catalog/photo-2-tablet@1x.jpg 1x, img/catalog/photo-2-tablet@2x.jpg 2x" <img
-                src="img/catalog/photo-2-mobile@1x.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x"
+                srcset="img/catalog/photo-2-desktop@1x.jpg 1x, img/catalog/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/catalog/photo-2-tablet@1x.jpg 1x, img/catalog/photo-2-tablet@2x.jpg 2x">
+              <img src="img/catalog/photo-2-mobile@1x.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x"
                 alt="Местная растительность.">
             </picture>
           </p>
@@ -56,7 +56,14 @@
         </li>
         <li class="catalog__item-two">
           <p class="catalog__item-two-image">
-            <img src="./img/catalog/photo-3.jpg" width="324" height="267" alt="Дорога на север.">
+            <picture>
+              <source media="(min-width: 1200px)"
+                srcset="img/catalog/photo-3-desktop@1x.jpg 1x, img/catalog/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/catalog/photo-3-tablet@1x.jpg 1x, img/catalog/photo-3-tablet@2x.jpg 2x">
+              <img src="img/catalog/photo-3-mobile@1x.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x"
+                alt="Дорога на север.">
+            </picture>
           </p>
           <div class="catalog__signatur">
             <h3 class="catalog__title">Дорога на север</h3>
@@ -66,7 +73,14 @@
         </li>
         <li class="catalog__item-two">
           <p class="catalog__item-two-image">
-            <img src="./img/catalog/photo-4.jpg" width="324" height="267" alt="Мост дьявола.">
+            <picture>
+              <source media="(min-width: 1200px)"
+                srcset="img/catalog/photo-4-desktop@1x.jpg 1x, img/catalog/photo-4-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/catalog/photo-4-tablet@1x.jpg 1x, img/catalog/photo-4-tablet@2x.jpg 2x">
+              <img src="img/catalog/photo-4-mobile@1x.jpg" srcset="img/catalog/photo-4-mobile@2x.jpg 2x"
+                alt="Мост дьявола.">
+            </picture>
           </p>
           <div class="catalog__signatur">
             <h3 class="catalog__title">Мост дьявола</h3>
