--- a/source/catalog.html
+++ b/source/catalog.html
@@ -107,7 +107,7 @@
       Смотрите видеопрезентацию и <br>скорее за билетами, пока они не <br>подорожали в очередной раз!
     </p>
   </section>
-  <div class="video--catalog">
+  <div class="video--catalog video">
     <picture>
       <source media="(min-width: 1200px)"
         srcset="img/catalog/video-desktop@1x.jpg 1x, img/catalog/video-desktop@2x.jpg 2x">
