--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
           <div class="benefits__img">
             <picture>
               <source media="(min-width: 1200px)"
-                srcset="./img/photo-city-desktop@1x.jpg 1x, ./img/photo-city--desktop@2x.jpg 2x">
+                srcset="./img/photo-city-desktop@1x.jpg 1x, ./img/photo-city-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="./img/photo-city-tablet@1x 1x, ./img/photo-city-tablet@2x 2x">
               <img class="photo-sedona" src="./img/photo-city-mobile@1x.jpg" srcset="./img/photo-city-mobile@2x.jpg 2x"
                 alt="Фотография седоны">
