--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
       </header>
       <ol class="benefits">
         <li class="benefits__item benefits__item--illustrated">
-          <div class="real-hous">
+          <div class="benefits__text">
             <h3 class="benefits__number">
               Настоящий городок
             </h3>
@@ -52,7 +52,7 @@
           </div>
         </li>
         <li class="benefits__item benefits__item--illustrated">
-          <div class="real-hous">
+          <div class="benefits__text">
             <h3 class="benefits__number">
               Там есть мост дьявола
             </h3>
