--- a/source/form.html
+++ b/source/form.html
@@ -114,7 +114,7 @@
     </div>
     <div class="emotions">
       <p class="emotions__title">Опишите свои эмоции:</p>
-      <textarea id="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
+      <textarea class="emotions__field" id="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
     </div>
     <div class="button__form">
       <button class="button button--form" type="submit">Отправить отзыв</button>
