--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,8 +11,7 @@
         фото и видео
       </h2>
       <p class="description__text description__text--catalog">
-        Не можете решиться на <br>путешествие из-за курса? <br> Фотографии помогут вам забыть о <br>политике и
-        экономике.
+        Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
       </p>
     </header>
   </section>
@@ -104,16 +103,16 @@
       Все еще сомневаетесь?
     </h2>
     <p class="information__text information__text--catalog">
-      Смотрите видеопрезентацию и <br>скорее за билетами, пока они не <br>подорожали в очередной раз!
+      Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
     </p>
   </section>
-  <div class="video-catalog">
+  <div class="video">
     <picture>
       <source media="(min-width: 1200px)"
         srcset="img/catalog/video-desktop@1x.jpg 1x, img/catalog/video-desktop@2x.jpg 2x">
       <source media="(min-width: 768px)"
         srcset="img/catalog/video-tablet@1x.jpg 1x, img/catalog/video-tablet@2x.jpg 2x">
-      <img src="img/catalog/video-mobile@1x.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" alt="Превью видео.">
+      <img class="video-catalog" src="img/catalog/video-mobile@1x.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" alt="Превью видео.">
     </picture>
   </div>
 </main>
