--- a/source/form.html
+++ b/source/form.html
@@ -11,8 +11,7 @@
         Оставьте свой отзыв
       </h2>
       <p class="description__text--form">
-        Помогите нашим отелям стать лучше!<br> оставьте отзыв о<br> них, а также о посещенных вами<br>
-        достопримечательностях
+        Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
       </p>
     </header>
   </section>
