--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,8 @@
             <picture>
               <source media="(min-width: 1200px)"
                 srcset="./img/photo-city-desktop@1x.jpg 1x, ./img/photo-city-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="./img/photo-city-tablet@1x.jpg 1x, ./img/photo-city-tablet@2x.jpg 2x">
+              <source media="(min-width: 768px)"
+                srcset="./img/photo-city-tablet@1x.jpg 1x, ./img/photo-city-tablet@2x.jpg 2x">
               <img class="photo-sedona" src="./img/photo-city-mobile@1x.jpg" srcset="./img/photo-city-mobile@2x.jpg 2x"
                 alt="Фотография седоны">
             </picture>
@@ -37,16 +38,36 @@
           <div class="advantages">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--housing">
-                <h3 class="advantages__title">Жилье</h3>
-                <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                <svg class="advantages__item-logo--housing" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80"
+                  fill="none">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M75.9 43.18L78 41.1l-9.94-9.84V4.4H54.2v13.12L40.45 4 3 41.2l2.1 2.08 7.84-7.76v37.6H9.02V76h64.16v-2.88h-5.12v-37.7l7.83 7.76zM57.11 7.38h7.93v20.98l-7.93-7.85V7.38zm7.93 65.64h-49.1V32.54l24.5-24.36 24.6 24.36v40.48zm-31.93-4.48h16.06V44.77H33.12v23.77zm13.05-2.88H36.03v-18h10.14v18zM40.85 39.3a7.78 7.78 0 01-7.73-7.75 7.63 7.63 0 017.73-7.66 7.72 7.72 0 017.83 7.66 7.8 7.8 0 01-7.83 7.75zm5.02-7.75a5.01 5.01 0 00-10.04 0 5.01 5.01 0 0010.04 0zM23.08 44.77h-3.01v3.88h3.01v-3.88zm3.01 0h3.01v3.88h-3v-3.88zm-3.01 5.97h-3.01v3.88h3.01v-3.88zm3.01 0h3.01v3.88h-3v-3.88zm29.12-5.97H52.2v3.88h3v-3.88zm3.01 0h3.01v3.88h-3v-3.88zm-3.01 5.97H52.2v3.88h3v-3.88zm3.01 0h3.01v3.88h-3v-3.88z"
+                    fill="#81B3D2" />
+                </svg>
+                <h3 class="advantages__title advantages__title--housing">Жилье</h3>
+                <p class="advantages__description advantages__description--housing">Рекомендуем пожить в настоящем
+                  мотеле, все как в кино!</p>
               </li>
               <li class="advantages__item advantages__item--food">
-                <h3 class="advantages__title">Еда</h3>
-                <p class="advantages__description">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+                <svg class="advantages__item-logo--food" viewBox="0 0 80 80" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M72.53 36.37c.02-.82.06-1.94-.02-2.23C71.81 18.52 57.45 6 39.8 6S7.69 18.52 6.99 34.14v3H72.5l.02-.77zM39.8 9c15.96 0 29.12 11.22 29.72 25.14H9.98C10.68 20.22 23.84 9 39.8 9zM23.24 48.86l-5.38-4-5.49 4L6 44.16l1.8-2.4 4.58 3.3 5.49-4 5.38 4 5.49-4 5.49 4 5.48-4 5.39 4 5.48-4 5.49 4 5.48-4 5.49 4 4.59-3.3 1.7 2.4-6.3 4.7-5.48-4-5.48 4-5.49-4-5.48 4-5.39-4-5.48 4-5.49-4-5.49 4zM6.3 52.06H73.7c2.4 0 4.29 2.01 4.29 4.21v3.5c0 2.41-2 4.31-4.29 4.31h-1v1c0 5.41-4.38 9.92-9.87 9.92H17.16a9.92 9.92 0 01-9.87-9.91v-1h-1c-2.4 0-4.29-1.9-4.29-4.21v-3.5c0-2.31 1.9-4.31 4.29-4.31zM62.94 72c3.79 0 6.88-3.1 6.88-6.91v-1H10.18v1c0 3.8 3.09 6.9 6.88 6.9h45.88zm10.77-10.92c.7 0 1.3-.6 1.3-1.3h.1v-3.4c0-.7-.6-1.3-1.3-1.3H6.3c-.7 0-1.3.6-1.3 1.2v3.5c0 .7.6 1.3 1.3 1.3H73.7zM41.9 21.62a2 2 0 11-4 .01 2 2 0 014 0zm-9.98-3a2 2 0 100-4 2 2 0 000 4zm17.95-2a2 2 0 11-4 0 2 2 0 014 0z"
+                    fill="#81B3D2" />
+                </svg>
+                <h3 class="advantages__title advantages__title--food">Еда</h3>
+                <p class="advantages__description advantages__description--food">Всегда заказывайте фирменный бургер,вы
+                  не разочаруетесь!</p>
               </li>
               <li class="advantages__item advantages__item--souvenirs">
-                <h3 class="advantages__title">Сувениры</h3>
-                <p class="advantages__description">Не только китайского, но и местного производства!</p>
+                <svg class="advantages__item-logo--souvenirs" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M69.2 25.12H44.8c13.6-6.8 14.7-11.1 14.2-13.5-1.1-3.9-5.6-6.9-9.8-5.3-5.5 2.1-7 10.3-8.5 16.2-1.9-6-3.7-13.6-8-17.5-1.2-1.1-3-2.2-5.7-2-4 .4-9.7 5.3-7.3 10.8 2.2 5.3 9.5 8.7 14.4 11.4H11.8a2.8 2.8 0 00-2.8 2.8v11.2c0 1.6 1.3 2.8 2.8 2.8h.3V78h57V42.01h.1c1.6 0 2.8-1.3 2.8-2.8v-11.2c0-1.6-1.3-2.9-2.8-2.9zM50.8 8.82c2.1-.3 4.9 1.3 5.2 3.2.4 2.7-3.3 5.2-5 6.3-2.5 1.7-4.9 2.6-7.2 4 .8-3.7 2.5-12.9 7-13.5zm-22.6 9.8c-2.2-1.5-6.4-4.4-6.3-7.7.1-3.6 5.7-6.5 8.7-3.8 3.8 3.3 5.6 11 7 16.4-3.2-1.6-6.2-2.8-9.4-4.9zM34.1 75H15V42.01h19.1v33zm0-35.99H12v-10.9h22.1v10.9zm10 36H37V28.1h7.1v46.9zm22 0h-19V42h19.1v33h-.1zM69 39H47.1v-10.9H69v10.9z"
+                    fill="#81B3D2" />
+                </svg>
+                <h3 class="advantages__title advantages__title--souvenirs">Сувениры</h3>
+                <p class="advantages__description advantages__description--souvenirs">Не только китайского, но и
+                  местного производства!</p>
               </li>
             </ul>
           </div>
