--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-<main class="main-container">
+<main class="main-container main-catalog">
   <h1 class="visually-hidden">фото и видео</h1>
   <section class="description description--catalog">
     <header class="description__header description__header--catalog">
@@ -31,11 +31,17 @@
             </picture>
           </p>
           <div class="catalog__signatur">
-            <div>
+            <section>
               <h3 class="catalog__title">Неродные просторы</h3>
               <p class="catalog__author">Автор фото: Борис</p>
-            </div>
-            <p class="catalog__like">1350</p>
+            </section>
+            <section class="catalog__like">
+              <svg class="catalog__like-svg" viewBox="0 0 23 21" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
+              </svg>
+              <p>1350</p>
+            </section>
           </div>
         </li>
         <li class="catalog__item-two">
@@ -54,7 +60,13 @@
               <h3 class="catalog__title">Местная растительность</h3>
               <p class="catalog__author">Автор фото: Сергей</p>
             </div>
-            <p class="catalog__like">143</p>
+            <section class="catalog__like">
+              <svg class="catalog__like-svg" viewBox="0 0 23 21" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
+              </svg>
+              <p>143</p>
+            </section>
           </div>
         </li>
         <li class="catalog__item-two">
@@ -73,7 +85,13 @@
               <h3 class="catalog__title">Дорога на север</h3>
               <p class="catalog__author">Автор фото: Петр</p>
             </div>
-            <p class="catalog__like">96</p>
+            <section class="catalog__like">
+              <svg class="catalog__like-svg" viewBox="0 0 23 21" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
+              </svg>
+              <p>96</p>
+            </section>
           </div>
         </li>
         <li class="catalog__item-two">
@@ -92,7 +110,13 @@
               <h3 class="catalog__title">Мост дьявола</h3>
               <p class="catalog__author">Автор фото: Антон</p>
             </div>
-            <p class="catalog__like">254</p>
+            <section class="catalog__like">
+              <svg class="catalog__like-svg" viewBox="0 0 23 21" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
+              </svg>
+              <p>254</p>
+            </section>
           </div>
         </li>
       </ul>
@@ -112,7 +136,8 @@
         srcset="img/catalog/video-desktop@1x.jpg 1x, img/catalog/video-desktop@2x.jpg 2x">
       <source media="(min-width: 768px)"
         srcset="img/catalog/video-tablet@1x.jpg 1x, img/catalog/video-tablet@2x.jpg 2x">
-      <img class="video-catalog" src="img/catalog/video-mobile@1x.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" alt="Превью видео.">
+      <img class="video-catalog" src="img/catalog/video-mobile@1x.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x"
+        alt="Превью видео.">
     </picture>
   </div>
 </main>
