--- a/source/form.html
+++ b/source/form.html
@@ -122,3 +122,10 @@
   </form>
 </main>
 {% endblock %}
+
+{# Модальное окно #}
+<div class="modal-container modal-container-close">
+  <h2 class="modal-container__title">Что-то пошло не так!</h2>
+  <p class="modal-container__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+  <button class="modal-container__button button" type="submit">ок</button>
+</div>
