--- a/source/form.html
+++ b/source/form.html
@@ -87,25 +87,25 @@
       <ul class="attraction__list">
         <li class="attraction__item">
           <label>
-            <input name="attraction__text" type="checkbox" value="bridge" checked>
+            <input class="attraction__text" name="attraction__text" type="checkbox" value="bridge" checked>
             Мост Дьявола
           </label>
         </li>
         <li class="attraction__item">
           <label>
-            <input name="attraction__text" type="checkbox" value="park" checked>
+            <input class="attraction__text" name="attraction__text" type="checkbox" value="park" checked>
             Слайд-парк
           </label>
         </li>
         <li class="attraction__item">
           <label>
-            <input name="attraction__text" type="checkbox" value="mountain" checked>
+            <input class="attraction__text" name="attraction__text" type="checkbox" value="mountain" checked>
             Гора-Колокол
           </label>
         </li>
         <li class="attraction__item">
           <label>
-            <input name="attraction__text" type="checkbox" value="rocks">
+            <input class="attraction__text" name="attraction__text" type="checkbox" value="rocks">
             Красные скалы
           </label>
         </li>
