--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-<main class="main-container main-index">
+<main class="main-container main-form">
   <h1 class="visually-hidden">Седона</h1>
   <section class="description">
     <div class="description__wrapper">
