--- a/source/form.html
+++ b/source/form.html
@@ -64,19 +64,19 @@
       <ul class="impression__list">
         <li class="impression__item">
           <label>
-            <input name="impression__different" type="radio" value="positive" checked>
+            <input name="impression__different" class="impression__different" type="radio" value="positive" checked>
             Скорее положительное
           </label>
         </li>
         <li class="impression__item">
           <label>
-            <input name="impression__different" type="radio" value="negative">
+            <input name="impression__different" class="impression__different" type="radio" value="negative">
             Скорее отрицательное
           </label>
         </li>
         <li class="impression__item">
           <label>
-            <input name="impression__different" type="radio" value="neutral">
+            <input name="impression__different" class="impression__different" type="radio" value="neutral">
             Затрудняюсь ответить
           </label>
         </li>
