--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-<main class="main-container main-catalog">
+<main class="main-container">
   <h1 class="visually-hidden">фото и видео</h1>
   <section class="description description--catalog">
     <header class="description__header description__header--catalog">
@@ -22,37 +22,30 @@
         <li class="catalog__item">
           <p class="catalog__item-image">
             <picture>
-              <source media="(min-width: 1200px)"
-                srcset="img/catalog/photo-1-desktop@1x.jpg 1x, img/catalog/photo-1-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)"
-                srcset="img/catalog/photo-1-tablet@1x.jpg 1x, img/catalog/photo-1-tablet@2x.jpg 2x">
-              <img src="img/catalog/photo-1-mobile@1x.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x"
-                alt="Народные просторы">
+              <source media="(min-width: 1200px)" srcset="img/catalog/photo-1-desktop@1x.jpg 1x, img/catalog/photo-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/catalog/photo-1-tablet@1x.jpg 1x, img/catalog/photo-1-tablet@2x.jpg 2x">
+              <img src="img/catalog/photo-1-mobile@1x.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x" alt="Народные просторы">
             </picture>
           </p>
           <div class="catalog__signatur">
-            <section>
+            <div>
               <h3 class="catalog__title">Неродные просторы</h3>
               <p class="catalog__author">Автор фото: Борис</p>
-            </section>
-            <section class="catalog__like">
-              <svg class="catalog__like-svg" viewBox="0 0 23 21" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
+            </div>
+            <div class="catalog__like">
+              <svg class="catalog__like-svg">
+                <use href="./icons/sprite.svg#like" />
               </svg>
               <p>1350</p>
-            </section>
+            </div>
           </div>
         </li>
         <li class="catalog__item-two">
           <p class="catalog__item-two-image">
             <picture>
-              <source media="(min-width: 1200px)"
-                srcset="img/catalog/photo-2-desktop@1x.jpg 1x, img/catalog/photo-2-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)"
-                srcset="img/catalog/photo-2-tablet@1x.jpg 1x, img/catalog/photo-2-tablet@2x.jpg 2x">
-              <img src="img/catalog/photo-2-mobile@1x.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x"
-                alt="Местная растительность.">
+              <source media="(min-width: 1200px)" srcset="img/catalog/photo-2-desktop@1x.jpg 1x, img/catalog/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/catalog/photo-2-tablet@1x.jpg 1x, img/catalog/photo-2-tablet@2x.jpg 2x">
+              <img src="img/catalog/photo-2-mobile@1x.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x" alt="Местная растительность.">
             </picture>
           </p>
           <div class="catalog__signatur">
@@ -60,24 +53,20 @@
               <h3 class="catalog__title">Местная растительность</h3>
               <p class="catalog__author">Автор фото: Сергей</p>
             </div>
-            <section class="catalog__like">
-              <svg class="catalog__like-svg" viewBox="0 0 23 21" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
+            <div class="catalog__like">
+              <svg class="catalog__like-svg">
+                <use href="./icons/sprite.svg#like" />
               </svg>
               <p>143</p>
-            </section>
+            </div>
           </div>
         </li>
         <li class="catalog__item-two">
           <p class="catalog__item-two-image">
             <picture>
-              <source media="(min-width: 1200px)"
-                srcset="img/catalog/photo-3-desktop@1x.jpg 1x, img/catalog/photo-3-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)"
-                srcset="img/catalog/photo-3-tablet@1x.jpg 1x, img/catalog/photo-3-tablet@2x.jpg 2x">
-              <img src="img/catalog/photo-3-mobile@1x.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x"
-                alt="Дорога на север.">
+              <source media="(min-width: 1200px)" srcset="img/catalog/photo-3-desktop@1x.jpg 1x, img/catalog/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/catalog/photo-3-tablet@1x.jpg 1x, img/catalog/photo-3-tablet@2x.jpg 2x">
+              <img src="img/catalog/photo-3-mobile@1x.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" alt="Дорога на север.">
             </picture>
           </p>
           <div class="catalog__signatur">
@@ -85,24 +74,20 @@
               <h3 class="catalog__title">Дорога на север</h3>
               <p class="catalog__author">Автор фото: Петр</p>
             </div>
-            <section class="catalog__like">
-              <svg class="catalog__like-svg" viewBox="0 0 23 21" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
+            <div class="catalog__like">
+              <svg class="catalog__like-svg">
+                <use href="./icons/sprite.svg#like" />
               </svg>
               <p>96</p>
-            </section>
+            </div>
           </div>
         </li>
         <li class="catalog__item-two">
           <p class="catalog__item-two-image">
             <picture>
-              <source media="(min-width: 1200px)"
-                srcset="img/catalog/photo-4-desktop@1x.jpg 1x, img/catalog/photo-4-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)"
-                srcset="img/catalog/photo-4-tablet@1x.jpg 1x, img/catalog/photo-4-tablet@2x.jpg 2x">
-              <img src="img/catalog/photo-4-mobile@1x.jpg" srcset="img/catalog/photo-4-mobile@2x.jpg 2x"
-                alt="Мост дьявола.">
+              <source media="(min-width: 1200px)" srcset="img/catalog/photo-4-desktop@1x.jpg 1x, img/catalog/photo-4-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/catalog/photo-4-tablet@1x.jpg 1x, img/catalog/photo-4-tablet@2x.jpg 2x">
+              <img src="img/catalog/photo-4-mobile@1x.jpg" srcset="img/catalog/photo-4-mobile@2x.jpg 2x" alt="Мост дьявола.">
             </picture>
           </p>
           <div class="catalog__signatur">
@@ -110,13 +95,12 @@
               <h3 class="catalog__title">Мост дьявола</h3>
               <p class="catalog__author">Автор фото: Антон</p>
             </div>
-            <section class="catalog__like">
-              <svg class="catalog__like-svg" viewBox="0 0 23 21" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m12.96 3.78-.62 3.05-.63 2.62h9.09v2.2l-3.03 7.25h-9.4V8.4l4.6-4.62ZM2.1 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.42.32-.63.84-.63 1.47v10.5c0 1.16.94 2.1 2.1 2.1h9.4c.84 0 1.57-.52 1.88-1.26l3.14-7.45c.1-.21.1-.53.1-.74v-2.1H23a2.1 2.1 0 0 0-2.1-2.1h-6.58l1.05-4.83v-.31c0-.43-.21-.84-.42-1.16L13.8 0ZM4.18 8.4H0V21h4.18V8.4Z" />
+            <div class="catalog__like">
+              <svg class="catalog__like-svg">
+                <use href="./icons/sprite.svg#like" />
               </svg>
               <p>254</p>
-            </section>
+            </div>
           </div>
         </li>
       </ul>
@@ -132,12 +116,9 @@
   </section>
   <div class="video">
     <picture>
-      <source media="(min-width: 1200px)"
-        srcset="img/catalog/video-desktop@1x.jpg 1x, img/catalog/video-desktop@2x.jpg 2x">
-      <source media="(min-width: 768px)"
-        srcset="img/catalog/video-tablet@1x.jpg 1x, img/catalog/video-tablet@2x.jpg 2x">
-      <img class="video-catalog" src="img/catalog/video-mobile@1x.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x"
-        alt="Превью видео.">
+      <source media="(min-width: 1200px)" srcset="img/catalog/video-desktop@1x.jpg 1x, img/catalog/video-desktop@2x.jpg 2x">
+      <source media="(min-width: 768px)" srcset="img/catalog/video-tablet@1x.jpg 1x, img/catalog/video-tablet@2x.jpg 2x">
+      <img class="video-catalog" src="img/catalog/video-mobile@1x.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" alt="Превью видео.">
     </picture>
   </div>
 </main>
