--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-<main class="main-container">
+<main class="main-container main-container--catalog">
   <h1 class="visually-hidden">фото и видео</h1>
   <section class="description description--catalog">
     <header class="description__header description__header--catalog">
