--- a/source/form.html
+++ b/source/form.html
@@ -3,7 +3,7 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-<main class="main-container">
+<main class="main-container main-container--form">
   <h1 class="visually-hidden">Отзывы</h1>
   <section class="description description--form">
     <header class="description__header description__header--form">
