--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
           </div>
         </li>
         <li class="benefits__item benefits__item--illustrated">
-          <div class="benefits__text">
+          <div class="benefits__texts">
             <h3 class="benefits__number">
               Там есть мост дьявола
             </h3>
