--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,7 +21,7 @@
       <ul class="catalog__list">
         <li class="catalog__item">
           <p class="catalog__item-image">
-            {% include "./templates/picture.twig" with {name: "catalog/photo-1", class: ""} %}
+            {% include "./templates/picture.twig" with {name: "catalog/photo-1", class: "catalog__item-image-photo-1"} %}
           </p>
           <div class="catalog__signatur">
             <div>
@@ -38,7 +38,7 @@
         </li>
         <li class="catalog__item-two">
           <p class="catalog__item-two-image">
-            {% include "./templates/picture.twig" with {name: "catalog/photo-2", class: ""} %}
+            {% include "./templates/picture.twig" with {name: "catalog/photo-2", class: "catalog__item-image-photo-2"} %}
           </p>
           <div class="catalog__signatur">
             <div>
@@ -55,7 +55,7 @@
         </li>
         <li class="catalog__item-two">
           <p class="catalog__item-two-image">
-            {% include "./templates/picture.twig" with {name: "catalog/photo-3", class: ""} %}
+            {% include "./templates/picture.twig" with {name: "catalog/photo-3", class: "catalog__item-image-photo-3"} %}
           </p>
           <div class="catalog__signatur">
             <div>
@@ -72,7 +72,7 @@
         </li>
         <li class="catalog__item-two">
           <p class="catalog__item-two-image">
-            {% include "./templates/picture.twig" with {name: "catalog/photo-4", class: ""} %}
+            {% include "./templates/picture.twig" with {name: "catalog/photo-4", class: "catalog__item-image-photo-4"} %}
           </p>
           <div class="catalog__signatur">
             <div>
