--- a/source/form.html
+++ b/source/form.html
@@ -29,13 +29,13 @@
           <li class="your-self__item">
             <label style="padding-left: 10px">
               Фамилия<span aria-hidden="true">*</span>:
-              <input type="text" placeholder="Пустота" required>
+              <input type="text" class="your-self__text" placeholder="Пустота" required>
             </label>
           </li>
           <li class="your-self__item">
             <label style="padding-left: 10px">
               Отчество:
-              <input type="text" placeholder="Викторович">
+              <input type="text" class="your-self__text" placeholder="Викторович">
             </label>
           </li>
         </ul>
