--- a/source/index.html
+++ b/source/index.html
@@ -95,7 +95,7 @@
     <a class="button button--index" href="#">Найти гостиницу</a>
   </section>
   <div class="maps">
-    {% include "./templates/picture.twig" with {name: "map", class: ""} %}
+    {% include "./templates/picture.twig" with {name: "map", class: "maps-image"} %}
   </div>
 </main>
 {% endblock %}
