--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
               </li>
               <li class="advantages__item advantages__item--food">
                 <h3 class="advantages__title advantages__title--food">Еда</h3>
-                <p class="advantages__description advantages__description--food">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+                <p class="advantages__description advantages__description--food">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="advantages__item advantages__item--souvenirs">
                 <h3 class="advantages__title advantages__title--souvenirs">Сувениры</h3>
@@ -46,7 +46,7 @@
           </div>
         </li>
         <li class="benefits__item benefits__item--illustrated">
-          <div class="benefits__texts">
+          <div class="benefits__text">
             <h3 class="benefits__number">
               Там есть мост дьявола
             </h3>
@@ -79,7 +79,7 @@
             мало туристов
           </h3>
           <p class="benefits__description">
-            Большинство едет в гранд каньон и толпится там
+            Большинство едет в гранд каньон и толпится там
           </p>
         </li>
       </ol>
@@ -95,7 +95,7 @@
     <a class="button button--index" href="#">Найти гостиницу</a>
   </section>
   <div class="maps">
-    {% include "./templates/picture.twig" with {name: "map", class: "maps-image"} %}
+    {% include "./templates/picture.twig" with {name: "map", class: "maps__image"} %}
   </div>
 </main>
 {% endblock %}
