--- a/source/form.html
+++ b/source/form.html
@@ -21,19 +21,19 @@
         <div class="your-self__title" id="your-self">Представьтесь:</div>
         <ul class="your-self__list">
           <li class="your-self__item">
-            <label style="padding-left: 10px">
+            <label>
               Имя<span aria-hidden="true">*</span>:
               <input type="text" class="your-self__text" placeholder="Пётр" required>
             </label>
           </li>
           <li class="your-self__item">
-            <label style="padding-left: 10px">
+            <label>
               Фамилия<span aria-hidden="true">*</span>:
               <input type="text" class="your-self__text" placeholder="Пустота" required>
             </label>
           </li>
           <li class="your-self__item">
-            <label style="padding-left: 10px">
+            <label>
               Отчество:
               <input type="text" class="your-self__text" placeholder="Викторович">
             </label>
@@ -44,13 +44,13 @@
         <div class="your-contact__title" id="your-contact">Контактная информация:</div>
         <ul class="your-contact__list">
           <li class="your-contact__item">
-            <label style="padding-left: 10px">
+            <label>
               Контактный телефон<span aria-hidden="true">*</span>:
               <input type="tel" placeholder="Введите телефон" required>
             </label>
           </li>
           <li class="your-contact__item">
-            <label style="padding-left: 10px">
+            <label>
               Электронная почта<span aria-hidden="true">*</span>:
               <input type="email" placeholder="Введите e-mail" required>
             </label>
@@ -93,14 +93,14 @@
         </li>
         <li class="attraction__item">
           <label>
-            <input class="attraction__text" name="attraction__text" type="checkbox" value="park" checked>
-            Слайд-парк
+            <input class="attraction__text" name="attraction__text" type="checkbox" value="mountain" checked>
+            Гора-Колокол
           </label>
         </li>
         <li class="attraction__item">
           <label>
-            <input class="attraction__text" name="attraction__text" type="checkbox" value="mountain" checked>
-            Гора-Колокол
+            <input class="attraction__text" name="attraction__text" type="checkbox" value="park" checked>
+            Слайд-парк
           </label>
         </li>
         <li class="attraction__item">
